[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/pixels.tres" type="DynamicFont" id=1]
[ext_resource path="res://Themes/default.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Images/Prototype/Portraits/male_08.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/PlayerUI.gd" type="Script" id=4]

[node name="PlayerUI" type="CanvasLayer"]
pause_mode = 2
layer = 50
script = ExtResource( 4 )

[node name="MapTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -34.5
margin_right = 34.5
margin_bottom = 14.0
text = "Map Name"

[node name="PlayerMenu" type="TabContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )

[node name="Party" type="Tabs" parent="PlayerMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 34.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CurrentMembers" type="Panel" parent="PlayerMenu/Party"]
margin_right = 140.0
margin_bottom = 143.0

[node name="CenterContainer" type="CenterContainer" parent="PlayerMenu/Party/CurrentMembers"]
anchor_right = 1.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="PlayerMenu/Party/CurrentMembers/CenterContainer"]
margin_left = 5.0
margin_right = 135.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Current Members"

[node name="MemberList" type="ItemList" parent="PlayerMenu/Party/CurrentMembers"]
margin_left = 18.0
margin_top = 21.0
margin_right = 123.0
margin_bottom = 126.0
same_column_width = true

[node name="AvailableMembers" type="Panel" parent="PlayerMenu/Party"]
margin_left = 3.0
margin_top = 163.0
margin_right = 143.0
margin_bottom = 306.0

[node name="CenterContainer" type="CenterContainer" parent="PlayerMenu/Party/AvailableMembers"]
anchor_right = 1.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="PlayerMenu/Party/AvailableMembers/CenterContainer"]
margin_left = 1.0
margin_right = 139.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Available Members"

[node name="MemberList" type="ItemList" parent="PlayerMenu/Party/AvailableMembers"]
margin_left = 18.0
margin_top = 21.0
margin_right = 123.0
margin_bottom = 126.0
same_column_width = true

[node name="MemberInfo" type="Panel" parent="PlayerMenu/Party"]
margin_left = 190.0
margin_top = 6.0
margin_right = 617.0
margin_bottom = 313.0

[node name="Stats" type="Panel" parent="PlayerMenu/Party/MemberInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -198.5
margin_top = 15.0
margin_right = -47.5
margin_bottom = 85.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerMenu/Party/MemberInfo/Stats"]
margin_left = 42.0
margin_right = 150.0
margin_bottom = 63.0

[node name="ProgressBar" type="ProgressBar" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer"]
margin_right = 108.0
margin_bottom = 9.0
size_flags_vertical = 3
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="ProgressBar2" type="ProgressBar" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer"]
margin_top = 13.0
margin_right = 108.0
margin_bottom = 23.0
size_flags_vertical = 3
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer"]
margin_top = 27.0
margin_right = 108.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Magic Atk"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 108.0
margin_bottom = 16.0
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer"]
margin_top = 47.0
margin_right = 108.0
margin_bottom = 63.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer/HBoxContainer2"]
margin_right = 86.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Magic Def"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Stats/VBoxContainer/HBoxContainer2"]
margin_left = 90.0
margin_right = 108.0
margin_bottom = 16.0
text = "10"

[node name="TextureRect" type="TextureRect" parent="PlayerMenu/Party/MemberInfo/Stats"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Stats"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.5
margin_top = -24.0
margin_right = 52.5
margin_bottom = -8.0
text = "Member Info"

[node name="Convictions" type="Panel" parent="PlayerMenu/Party/MemberInfo"]
margin_left = 5.0
margin_top = 96.0
margin_right = 156.0
margin_bottom = 183.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerMenu/Party/MemberInfo/Convictions"]
margin_left = 24.0
margin_top = 15.0
margin_right = 132.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer"]
margin_right = 108.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Survival"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer"]
margin_top = 20.0
margin_right = 108.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer2"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Strength"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer"]
margin_top = 40.0
margin_right = 108.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Peace"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer3"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="HBoxContainer4" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer"]
margin_top = 60.0
margin_right = 108.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer4"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Empathy"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions/VBoxContainer/HBoxContainer4"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Convictions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.0
margin_right = 37.0
margin_bottom = 14.0
text = "Convictions"

[node name="Equipment" type="Panel" parent="PlayerMenu/Party/MemberInfo"]
margin_left = 264.0
margin_top = 97.0
margin_right = 415.0
margin_bottom = 184.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerMenu/Party/MemberInfo/Equipment"]
margin_left = 24.0
margin_top = 15.0
margin_right = 132.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer"]
margin_right = 108.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Weapon"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer"]
margin_top = 20.0
margin_right = 108.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer/HBoxContainer2"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Armor"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer"]
margin_top = 40.0
margin_right = 108.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Accesory"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment/VBoxContainer/HBoxContainer3"]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 16.0
text = "1"

[node name="Label2" type="Label" parent="PlayerMenu/Party/MemberInfo/Equipment"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.0
margin_right = 37.0
margin_bottom = 14.0
text = "Equipment"

[node name="MemberOptions" type="Panel" parent="PlayerMenu/Party/MemberInfo"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -57.0
margin_right = -1.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerMenu/Party/MemberInfo/MemberOptions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -37.0

[node name="Button2" type="Button" parent="PlayerMenu/Party/MemberInfo/MemberOptions/VBoxContainer"]
margin_right = 427.0
margin_bottom = 22.0
text = "Add"

[node name="Button" type="Button" parent="PlayerMenu/Party/MemberInfo/MemberOptions/VBoxContainer"]
margin_top = 26.0
margin_right = 427.0
margin_bottom = 48.0
disabled = true
text = "Remove"

[node name="Convictions" type="Tabs" parent="PlayerMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Inventory" type="Tabs" parent="PlayerMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="System" type="Tabs" parent="PlayerMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SystemMenu" type="PanelContainer" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -41.0
margin_right = 63.5
margin_bottom = 41.0

[node name="VBoxContainer" type="VBoxContainer" parent="SystemMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 120.0
margin_bottom = 75.0

[node name="SaveButton" type="Button" parent="SystemMenu/VBoxContainer"]
margin_right = 113.0
margin_bottom = 20.0
disabled = true
text = "Save"

[node name="LoadButton" type="Button" parent="SystemMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 113.0
margin_bottom = 44.0
disabled = true
text = "Load"

[node name="QuitButton" type="Button" parent="SystemMenu/VBoxContainer"]
margin_top = 48.0
margin_right = 113.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="SystemMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
